changed the index route from being youtube.ejs to instagram template

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -285,10 +285,10 @@ button {
     margin: auto;
 }
 
-#g2 ul a:hover {
+/* #g2 ul a:hover {
     margin: auto;
     width: 50%;
-}
+} */
 
 #g2 ul button {
     width: 15vw;
