--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,7 +85,6 @@ nav {
     text-align: center;
 }
 
-
 /* .content {
     display: flex;
     flex-direction: column;
@@ -118,8 +117,6 @@ form {
     flex-direction: column;
     align-items: center;
 }
-
-
 
 input[type="url"] {
     padding: 10px;
@@ -213,7 +210,6 @@ button {
     100% { transform: rotate(360deg); }
 }
 
-
 #videoPlayer {
     height: 50vh;
     margin-left: auto;
@@ -281,7 +277,7 @@ button {
 }
 
 #g2 ul a {
-    width: 15vw;
+    /* width: 15vw; */
     margin: auto;
 }
 
@@ -446,6 +442,10 @@ footer .copyright p {
 
     #g2 ul button {width: 50%;}
 
+    #g2 ul button:hover {
+        width: 70%;
+    }
+
     footer .social-media a {
         font-size: 20px;
         margin: 0 8px;
@@ -455,7 +455,3 @@ footer .copyright p {
         font-size: 12px;
     }
 }
-
-
-
-
